[gd_scene load_steps=6 format=3]

[ext_resource type="Script" path="res://scripts/ui/Menu.gd" id="1_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bg"]
bg_color = Color(0.02, 0.02, 0.08, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.05, 0.05, 0.15, 0.92)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.3, 0.5, 1.0, 0.5)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color(0.1, 0.2, 0.5, 0.3)
shadow_size = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btn"]
bg_color = Color(0.12, 0.18, 0.35, 0.9)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.4, 0.6, 1.0, 0.5)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
content_margin_left = 20.0
content_margin_right = 20.0
content_margin_top = 12.0
content_margin_bottom = 12.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btn_hover"]
bg_color = Color(0.2, 0.3, 0.55, 0.95)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.5, 0.7, 1.0, 0.8)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
content_margin_left = 20.0
content_margin_right = 20.0
content_margin_top = 12.0
content_margin_bottom = 12.0

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.02, 0.02, 0.08, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -300.0
offset_top = 80.0
offset_right = 300.0
offset_bottom = 180.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.4, 0.7, 1.0, 1)
theme_override_colors/font_shadow_color = Color(0.1, 0.2, 0.6, 0.6)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_font_sizes/font_size = 52
text = "‚úà CHICKEN SHOOTER"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 170.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.5, 0.6, 0.8, 0.7)
theme_override_font_sizes/font_size = 16
text = "Survive the waves. Destroy them all."
horizontal_alignment = 1

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -140.0
offset_right = 180.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = 24.0
offset_right = -24.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 14
alignment = 1

[node name="HighScoreLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1.0, 0.85, 0.2, 1)
theme_override_font_sizes/font_size = 20
text = "üèÜ HIGH SCORE: 0"
horizontal_alignment = 1

[node name="Sep" type="HSeparator" parent="Panel/VBox"]
layout_mode = 2
theme_override_colors/separator_color = Color(0.3, 0.5, 1.0, 0.3)

[node name="StartBtn" type="Button" parent="Panel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.95, 1.0, 1)
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxFlat_btn")
theme_override_styles/hover = SubResource("StyleBoxFlat_btn_hover")
text = "üöÄ NEW GAME"

[node name="LoadBtn" type="Button" parent="Panel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.95, 1.0, 1)
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxFlat_btn")
theme_override_styles/hover = SubResource("StyleBoxFlat_btn_hover")
text = "üíæ CONTINUE"

[node name="ChangePlaneBtn" type="Button" parent="Panel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.95, 1.0, 1)
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxFlat_btn")
theme_override_styles/hover = SubResource("StyleBoxFlat_btn_hover")
text = "‚úà CHANGE PLANE"

[node name="QuitBtn" type="Button" parent="Panel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.4, 0.4, 1)
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxFlat_btn")
theme_override_styles/hover = SubResource("StyleBoxFlat_btn_hover")
text = "‚úï QUIT"

[connection signal="pressed" from="Panel/VBox/StartBtn" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Panel/VBox/LoadBtn" to="." method="_on_load_pressed"]
[connection signal="pressed" from="Panel/VBox/ChangePlaneBtn" to="." method="_on_change_plane_pressed"]
[connection signal="pressed" from="Panel/VBox/QuitBtn" to="." method="_on_quit_pressed"]
